--- a/style.css
+++ b/style.css
@@ -15,5 +15,7 @@ h2 {text-align: right;
 h3 {border-color: rgb(18, 66, 4);
     border-style: solid;
     border-width: 5px;
-}
+h2{border-color: darkgreen
+   border-style:solid;
+   border-width: 5px;
 
