--- a/style.css
+++ b/style.css
@@ -20,4 +20,7 @@ h2{border-color: rgb(18, 66, 4);
    border-style: solid;
    border-width: 5px;
  }
-
+#parte02 {background-color: lightblue
+}
+#parte01 {background-color: mediumseagreen;
+}
