--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 h1 {color: darkslategray;
+    text-align: center;
+    font-size: larger;
 }
 
 
@@ -16,10 +18,6 @@ h3 {border-color: rgb(18, 66, 4);
     border-style: solid;
     border-width: 5px;
 
-h2{border-color: rgb(18, 66, 4);
-   border-style: solid;
-   border-width: 5px;
- }
 #parte02 {background-color: lightblue
 }
 #parte01 {background-color: mediumseagreen;
