--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ h3 {border-color: rgb(18, 66, 4);
     border-style: solid;
     border-width: 5px;
 
-#parte02 {background-color: lightblue
+.parte02 {background-color: lightblue
 }
-#parte01 {background-color: mediumseagreen;
+.parte01 {background-color: mediumseagreen;
 }
