--- a/style.css
+++ b/style.css
@@ -1,24 +1,16 @@
-h1 {color: darkslategray;
+body {background-color: rgb(0, 0, 0);
+}
+h1 {color: rgb(40, 95, 3);
+text-align: center;
+}
+h2 {color: rgb(2, 105, 2);
+}
+h3 {color: rgb(70, 158, 12);
     text-align: center;
-    font-size: 70px;
 }
-
-
-h2 {color: darkslategray;
+#imagem {width: 50%;
+         margin-left: 20%;
+         border
 }
-
-h3 {color: darkslategray;
-}
-
-h1 {text-align: center;
-}
-h2 {text-align: right;
-}
-h3 {border-color: rgb(18, 66, 4);
-    border-style: solid;
-    border-width: 5px;
-
-.parte02 {background-color: lightblue
-}
-.parte01 {background-color: mediumseagreen;
+#imagem{margin-top:10%;
 }
